--- a/package.json
+++ b/package.json
@@ -2,6 +2,12 @@
   "name": "sort-array",
   "version": "0.0.0",
   "description": "An helper function to sort array based on a property or a predicate",
+  "main": "dist/src/sort-array.js",
+  "types": "dist/src/sort-array.d.ts",
+  "scripts": {
+    "build": "tsc",
+    "test": "jest"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/fvilers/sort-array.git"
@@ -16,5 +22,12 @@
   "bugs": {
     "url": "https://github.com/fvilers/sort-array/issues"
   },
-  "homepage": "https://github.com/fvilers/sort-array#readme"
+  "homepage": "https://github.com/fvilers/sort-array#readme",
+  "devDependencies": {
+    "@babel/preset-env": "^7.15.6",
+    "@babel/preset-typescript": "^7.15.0",
+    "@types/jest": "^27.0.1",
+    "jest": "^27.2.0",
+    "typescript": "^4.4.3"
+  }
 }
