--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@fvilers/sort-array",
   "version": "1.1.0",
   "description": "An helper function to sort array based on a property or a predicate",
+  "type": "module",
   "main": "dist/src/index.js",
   "types": "dist/src/index.d.ts",
   "scripts": {
@@ -35,6 +36,6 @@
     "@babel/preset-typescript": "^7.15.0",
     "@types/jest": "^27.0.1",
     "jest": "^27.2.0",
-    "typescript": "^4.4.3"
+    "typescript": "^4.7.4"
   }
 }
